--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,6 @@
         android:id="@+id/buttonCompleteTasks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Complete tasks" />
+        android:text="View Completed" />
 
 </LinearLayout>
