--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,10 +40,23 @@
         android:layout_width="match_parent"
         android:layout_height="592dp" />
 
-    <Button
-        android:id="@+id/buttonCompleteTasks"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="View Completed" />
+        android:layout_height="52dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/buttonAddSelected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Add Selected" />
+
+        <Button
+            android:id="@+id/buttonCompleteTasks"
+            android:layout_width="203dp"
+            android:layout_height="wrap_content"
+            android:text="View Completed" />
+    </LinearLayout>
 
 </LinearLayout>
